# raisin

./: .gitmodules  Cargo.toml  README.md  build.rs
src/: main.rs
src/app/: application.rs  cqrs.rs  cqrs_es.rs  mod.rs
src/app/cqrs/commands/: cfg.rs  file.rs  mod.rs
src/app/cqrs/queries/: cfg.rs  file.rs  sources.rs
src/app/cqrs_es/: command.rs  cqrs.rs  event.rs  mod.rs
src/app/dtos/: mod.rs  sources.rs
src/app/dtos/cfg/: mod.rs  scope.rs
src/app/handlers/: mod.rs
src/app/mappers/: source.rs
src/app/services/: cli.rs  cli_service.rs  load_project_service.rs  logger.rs  mod.rs  parse_project_service.rs
src/core/: domain.rs
src/domain/: languages.rs  mod.rs  program.rs  repository.rs
src/domain/cfg/: aggregate.rs  block.rs  cfg.rs  commands.rs  events.rs  factory.rs  mod.rs  scope.rs
src/domain/sources/: aggregate.rs  code.rs  factory.rs  file.rs  mod.rs  sources.rs
src/infra/: mod.rs
src/infra/event_bus/: mod.rs
src/infra/factories/: cfgs.rs  mod.rs  sources.rs
src/infra/repositories/: cfg.rs  mod.rs  sources.rs
src/infra/services/: logger.rs  mod.rs  parsers.rs
src/infra/services/adapters/parsers/: mod.rs  specific.rs  tree_sitter.rs
src/infra/services/adapters/parsers/languages/: python.rs
src/infra/services/adapters/sources/: file_indexer.rs  source_reader.rs
src/infra/services/bus/: cqrs.rs  event_bus.rs  mod.rs
src/infra/services/parsers/: mod.rs  scope.rs  tree_sitter.rs
src/infra/services/sources/: file_indexer.rs  mod.rs  source_discover.rs  source_reader.rs
