[package]
name = "raisin"
version = "0.1.0"
edition = "2021"

[toolchain]
channel = "nightly"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
walkdir = "2"
tree-sitter = "0.20.6"
async-trait = "0.1.52"
multimap =  "0.8.3"
priority-queue = "1.2.2"
serde = { version = "1.0", features = ["derive"]}
tokio = { version = "1", features = ["full"] }
clap = { version = "3.2.10", features = ["derive"] }
clap_complete = { version = "3.2.1" }
log = "0.4"
clang = { version = "2.0.0", features = ["clang_10_0"] }
rustpython-parser = "0.1.2"

[dependencies.uuid]
version = "1.0.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
    "serde",             # Enable serde serialization and deserialization
]

[build-dependencies]
cc="*"
